--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,6 @@ jobs:
       WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }} 
     steps:
       - name: Clone project
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - name: Package and release
-        uses: BigWigsMods/packager@master
+        uses: BigWigsMods/packager@v2
