--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,5 +16,7 @@ jobs:
     steps:
       - name: Clone project
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Package and release
         uses: BigWigsMods/packager@v2
