--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,9 +12,11 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "~\\.vscode\\extensions\\ketho.wow-api-0.21.0\\Annotations\\Core"
+        "~\\.vscode\\extensions\\ketho.wow-api-0.21.0\\Annotations\\Core",
+        "~\\.vscode\\extensions\\ketho.wow-api-0.21.0\\Annotations\\FrameXML"
     ],
     "Lua.diagnostics.globals": [
-        "ERR_DUEL_REQUESTED"
+        "ERR_DUEL_REQUESTED",
+        "issecretvalue"
     ]
 }
